@startuml
class Student {
  studentId : String
  name : String
  email : String
}

class Course {
  courseId : String
  title : String
  instructor : String
  maxSeats : int
  enrolledCount : int
}

class Enrollment {
  studentId : String
  courseId : String
  status : ENROLLED | WAITLISTED | DROPPED | COMPLETED
}

Student "1" -- "*" Enrollment
Course "1" -- "*" Enrollment
@enduml
